Perkin-UAT/force-app/main/default/objects/B2B_Homepage_Carousel__mdt/B2B_Homepage_Carousel__mdt.object-meta.xml
<CustomObject>
    <label>B2B Homepage Carousel</label>
    <pluralLabel>B2B Homepage Carousels</pluralLabel>
</CustomObject>