Perkin-UAT/force-app/main/default/objects/B2B_Homepage_Carousel__mdt/fields/B2B_URL_Target__c.field-meta.xml
<CustomField>
    <fullName>B2B_URL_Target__c</fullName>
    <label>URL Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>